<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.AboutUsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo_of_the_company"
                    android:paddingTop="?attr/actionBarSize"
                    android:src="@drawable/chilled_cat_pet1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/we_invite_you_to_know_investigato"
                        android:textColor="@color/aquamarine"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_ipsum" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/follow_us_on_facebook"
                        app:chipIcon="@drawable/facebook_icon"
                        app:chipIconEnabled="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/contact_us"
                        android:textSize="25sp" />

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints="name"
                        android:hint="@string/full_name"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints="emailAddress"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints="phone"
                        android:hint="@string/phone_number"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/et_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:gravity="start|top"
                        android:hint="@string/type_here_your_message"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:maxLines="10"
                        android:scrollbars="vertical" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxWidth="320dp"
                        android:text="@string/send" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/facebook_icon_by_icons8" />
            </LinearLayout>

        </ScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:navigationIcon="?attr/homeAsUpIndicator" />

        </com.google.android.material.appbar.AppBarLayout>
    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>